tooling/nargo_cli/tests/snapshots/execution_success/as_witness/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(a: Field) -> pub Field {
    std::as_witness(a);
    a
}
