tooling/nargo_cli/tests/snapshots/execution_success/as_witness/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "a",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "field"
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/62QsQ2AMAwEMWIgO7aJ3bEKEc7+IyCUFFEKGjjp9cVLVzwsDeiZWXsfvRl3kcgpiOnE5MUURctuZKSmVzLmMLHsxTM6CQdVda7YGF34DYL/XPi4tuGLGXjZbjcKT/NEAQAA",
  "debug_symbols": "dY/RCoMwDEX/Jc990IeNzV8ZQ2KNUghtia0wxH9fFLvJYE/pzem5tAv01OWxdX4IEzSPBTpxzG5sOVhMLnjdLquBEtskRLqCE1cropBP0PjMbGBGzvulKaLfZ0JRWhkg3+vUwsExbafVfO3qv3q/HW5dXz/2RfWnJrROfh88ozjsmI44ZG9PNL1iIeXDUYKlPgttTTvT7jc=",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
