tooling/nargo_cli/tests/snapshots/execution_success/as_witness/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: Field):
    (no terminator instruction)
}
[as_witness] Circuit output: 0x2a
